<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="in">aisle</string>
    <string name="aisle_settings">Aisle setup</string>
    <string name="all_aisles">All</string>
    <string name="app_name">Honey, Go Grocery Shopping!</string>
    <string name="apply_to_master">Save to master list (i.e., recurring list of grocery items) </string>
    <string name="at">section</string>
    <string name="dropbox_logout">Unlink from Dropbox</string>
    <string name="dropbox_settings">Dropbox</string>
    <string name="enter_category_name">Enter type of grocery item</string>
    <string name="button_add">Add</string>
    <string name="button_done">done</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="btn_okay">OK</string>
    <string name="button_save">Save</string>
    <string name="button_search">Search </string>
    <string name="cancel_sharing">Cancel - not ready to share files using Dropbox</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="confirm_overwrite">The Dropbox shared folder has grocery lists.  Do you want to overwrite your files with those in the sared file?  (Clicking no will make your local files the ones that are shared.)</string>
    <string name="create_shopping_list_first">"You must create a shopping list before you can go shopping!"</string>
    <!-- string name="categories_settings">Types of Groceries</string -->
    <string name="colon_separator">:</string>
    <string name="create_new_grocery_list">Start this week\'s grocery list</string>
    <string name="default_category_name">Unknown</string>    <string name="default_grocery_store_name">Regular</string>
    <string name="del_label">Del</string>
    <string name="edit">Edit</string>
    <string name="edit_name">Describe the grocery item</string>
    <string name="edit_notes">Additional information</string>
    <string name="edit_current_grocery_list">Edit Current List</string>
    <string name="edit_item_name">Enter name or description</string>
    <string name="edit_grocery_list">Continue working on this week\'s grocery list</string>
    <string name="edit_master_grocery_list">Manage the master list of groceries</string>
    <string name="exit">Exit</string>
    <string name="enter_quqntity">##.##</string>
    <string name="enter_new_grocery_name">Enter new grocery store name:</string>
    <string name="enter_search_keywords">Search</string>
    <string name="fn_grocery_sections">category.json</string>
    <string name="fn_master_list">master_list.json</string>
    <string name="fn_current_list">current_list.json</string>
    <string name="fn_shopping_list">shopping_list.json</string>
    <string name="go_shopping">Go Shopping!</string>
    <string name="grocery_store_name">Grocery Store Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_aisle">Aisle</string>
    <string name="label_cat">Type of Item</string>
    <string name="label_note">Note:</string>
    <string name="label_prompt_for_sharing_direction">"There are grocery files in your dropbox folder. What would you like to do?"</string>
    <string name="label_for_aisle_grocery_item_types">Grocery sections in aisle:</string>
    <string name="looking_up_product_information">Looking up product information</string>
    <string name="master_list_settings">Master List</string>
    <string name="menu_settings">Settings</string>
    <string name="name">Description:</string>
    <string name="new_grocery_story_name">New Grocery Store</string>
    <string name="no">No</string>
    <string name="no_shopping_list">No Shopping List</string>
    <string name="proceed">Proceed</string>
    <string name="quantity">Quantity</string>
    <string name="scan">Scan</string>
    <string name="select">Include in this list</string>
    <string name="select_activity">What would you like to do?</string>
    <string name="select_by_default">Select by default</string>
    <string name="select_category">Type of grocery item</string>
    <string name="select_grocery_store_label">Select grocery store:</string>
    <string name="separator">-</string>
    <string name="setup_dropbox_auth">Link to Dropbox</string>
    <string name="share">Share %s grocery lists using Dropbox</string>
    <string name="share_store_lists">Share %s grocery lists using Dropbox</string>
    <string name="title_activity_edit_aisles">Aisle Setup</string>
    <string name="title_activity_edit_category_list">Types of Grocery Items</string>
    <string name="title_activity_edit_categories">Where to find what types of grocery items</string>
    <string name="title_activity_edit_current_item">Edit Item Activity</string>
    <string name="title_activity_edit_current_list">Edit List</string>
    <string name="title_activity_edit_master_grocery_list">Master List</string>
    <string name="title_activity_edit_master_item">Edit Item</string>
    <string name="title_activity_main">Honey, Go Grocery Shopping!</string>
    <string name="title_activity_select_product">Select the Product To Add</string>
    <string name="title_activity_setup_dropbox_authentication">Sharing Grocery Lists</string>
    <string name="title_activity_shopping_list">Grocery List</string>
    <string name="unit">Unit: e.g. 12oz box</string>
    <string name="unknown_aisle">Unknown</string>
    <string name="yes">Yes</string>
    <string name="uploading_latest_files">Uploading latest shared files</string>
    <string name="use_dropbox_files">Use grocery files in the shared DropBox folder</string>
    <string name="share_grocery_files">Share your grocery files by copying them to the DropBox folder</string>
    <string name="title_activity_create_grocery_store">Create Grocery Store</string>
</resources>