<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
      
    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
          android:layout_height="wrap_content"
         android:id="@+id/edit_cat_name"
         android:hint="@string/enter_category_name"
         />
     
    <EditText
        android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:id="@+id/edit_aisle"
         android:hint="@string/label_aisle"
         />
    </LinearLayout>
      <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
     <Button
         android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_done"
        android:onClick="editItemDone" />
       <Button
         android:id="@+id/delButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:onClick="deleteItem" />
       </LinearLayout>
</LinearLayout>