<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/layoutbackground"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout 
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="bottom"
   >    
  <ImageButton
       style="@style/searchAddButtonStyle"
       android:id="@+id/add_button"
        android:src="@drawable/ic_menu_add"
        android:contentDescription="@string/button_add"
         android:layout_weight="1"
    android:layout_width="0dp"
        
        android:onClick="addItem" />        
     <EditText
        android:id="@+id/search_text"
        style="@style/searchTextStyle"   
    android:layout_width="0dp"
        android:layout_weight="5"
        android:hint="@string/enter_search_keywords"
        />
     <ImageButton
             style="@style/searchAddButtonStyle"
             android:contentDescription="@string/button_search"
             android:onClick="searchForItem"
             android:layout_marginRight="2dp"
             android:id="@+id/search_button"
             android:layout_width="0dp"
              android:layout_weight="1"
             android:src="@drawable/ic_btn_search" />    
  </LinearLayout>
 
    
    <ListView         android:id="@+id/masterlist"
       style="@style/readOnlyListViewStyle"
>
        
    </ListView>


</LinearLayout>
